--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&display=swap" rel="stylesheet">
 
-    <title>Better Work</title>
+    <title>Coming Soon...</title>
   </head>
   <body>
     <header>
