Actually coming soon

--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&display=swap" rel="stylesheet">
 
-    <title>Coming Soon...</title>
+    <title>Better Work</title>
   </head>
   <body>
     <header>
       <div class="titleWrap">
         <div class="titleDiv">
-          <h1>Better Work</h1>
+          <h1>Coming Soon...</h1>
         </div>
       </div>
     </header>
