add favicon as logo

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./imgs/Bw_logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,8 +24,7 @@
     <nav>
       <ul class="menu expanded text-center">
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a>Instructions</a></li>
-        <li><a>Personal Page</a></li>
+        <li class="active"><a href="personal.html">Your Habits</a></li>
       </ul>
     </nav>
 
