Template for org.html

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="titleWrap">
         <div class="titleDiv">
-          <h1>Coming Soon...</h1>
+          <h1>Better Work</h1>
         </div>
       </div>
     </header>
@@ -24,6 +24,7 @@
       <ul class="menu expanded text-center">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a>Instructions</a></li>
+        <li><a href="org.html">Your Organisation</a></li>
         <li><a>Personal Page</a></li>
       </ul>
     </nav>
