--- a/client/org.html
+++ b/client/org.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YourOrg</title>
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="./src/js/index.js"></script>
   </head>
   <body>
     <header>
       <nav></nav>
     </header>
     <main id="org-main">
-      <div id="leaderboard-container"></div>
+      <div id="leaderboard-container">
+        <div id="inner-container" class="hide-scrollbar">
+          <div id="Item1"></div>
+          <div id="leaderboard"></div>
+        </div>
+      </div>
       <div id="aside">
         <div id="above"></div>
         <div id="user-card"></div>
