--- a/client/org.html
+++ b/client/org.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YourOrg</title>
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./src/js/index.js"></script>
+    <script defer src="./bundle.js"></script>
   </head>
   <body>
     <header>
