--- a/client/index.html
+++ b/client/index.html
@@ -39,20 +39,20 @@
           <label for="username"><b>Username</b></label>
           <input type="text" placeholder="Enter Username" name="username" id="username" required />
 
+          <label for="org"><b>Repeat Password</b></label>
+          <input
+          type="text"
+          placeholder="Enter Organisation"
+          name="org"
+          required
+          />
+
           <label for="psw"><b>Password</b></label>
           <input
             type="password"
             placeholder="Enter Password"
             name="psw"
             id="password"
-            required
-          />
-
-          <label for="psw-repeat"><b>Repeat Password</b></label>
-          <input
-            type="password"
-            placeholder="Repeat Password"
-            name="psw-repeat"
             required
           />
 
