Login forms dont appear on refresh when logged in

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <div class="formWrapper">
+    <div id="home-form-container" class="formWrapper">
       <form id="register-form" action="submit" class="formWrapper1">
         <div class="container">
           <h2>Sign Up</h2>
@@ -39,7 +39,7 @@
           <label for="username"><b>Username</b></label>
           <input type="text" placeholder="Enter Username" name="username" id="username" required />
 
-          <label for="org"><b>Repeat Password</b></label>
+          <label for="org"><b>Organisation</b></label>
           <input
           type="text"
           placeholder="Enter Organisation"
@@ -73,6 +73,7 @@
 
           <label for="psw"><b>Password</b></label>
           <input
+            id="login-password"
             type="password"
             placeholder="Enter Password"
             name="psw"
