add populate habit form

--- a/client/personal.html
+++ b/client/personal.html
@@ -34,6 +34,8 @@
           <button type="submit" class="signinbtn">Create</button>
         </div>
       </div>
+
+      <div class="wrapper" id="wrapper"></div>
     </form>
   </body>
 </html>
