--- a/client/personal.html
+++ b/client/personal.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/6ac9ad1595.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./bundle.js"></script>
     <title>Habits</title>
   </head>
   <body>
@@ -34,7 +35,7 @@
           <button type="submit" class="signinbtn">Create</button>
         </div>
       </div>
-
+      <button type="button" id="test_button">Click Me!</button>
       <div class="wrapper" id="wrapper"></div>
     </form>
   </body>
