--- a/client/personal.html
+++ b/client/personal.html
@@ -37,6 +37,7 @@
       </div>
     </form> -->
     <button type="button" id="test_button">My Habits</button>
+    <button type="button" id="test_button2">Choose Habits</button>
     <div class="wrapper" id="wrapper"></div>
   </body>
 </html>
