Fix personal page contents on DOM load

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
       <ul class="menu expanded text-center">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="org.html">Your Organisation</a></li>
-        <li class="active"><a href="personal.html">Your Habits</a></li>
+        <li class="active"><a id ="personal" href="personal.html">Your Habits</a></li>
       </ul>
     </nav>
 
