--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./imgs/Bw_logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="./style.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&display=swap" rel="stylesheet">
@@ -26,67 +26,11 @@
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="org.html">Your Organisation</a></li>
         <li class="active"><a id ="personal" href="personal.html">Your Habits</a></li>
+        <li><a onclick="window.localStorage.clear()" id="'logout" href="index.html">Logout</a></li>
       </ul>
     </nav>
 
-    <div id="home-form-container" class="formWrapper">
-      <form id="register-form" action="submit" class="formWrapper1">
-        <div class="container">
-          <h2>Sign Up</h2>
-          <p>Please fill in this form to create an account.</p>
-          <hr />
-
-          <label for="username"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="username" id="username" required />
-
-          <label for="org"><b>Organisation</b></label>
-          <input
-          type="text"
-          placeholder="Enter Organisation"
-          name="org"
-          required
-          />
-
-          <label for="psw"><b>Password</b></label>
-          <input
-            type="password"
-            placeholder="Enter Password"
-            name="psw"
-            id="password"
-            required
-          />
-
-          <div class="clearfix">
-            <button type="submit" class="signupbtn">Sign Up</button>
-          </div>
-        </div>
-      </form>
-
-      <form id="login-form" action="submit" class="formWrapper2">
-        <div class="container">
-          <h2>Sign In</h2>
-          <p>Please fill in this form to sign into your account.</p>
-          <hr />
-
-          <label for="username"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="username" required />
-
-          <label for="psw"><b>Password</b></label>
-          <input
-            id="login-password"
-            type="password"
-            placeholder="Enter Password"
-            name="psw"
-            required
-          />
-
-          <div class="clearfix">
-            <button type="submit" class="signinbtn">Sign In</button>
-          </div>
-        </div>
-      </form>
-      </div>
-    </div>
+    <div id="home-form-container" class="formWrapper"></div>
     </body>
 
     <div class="wrapper" id="wrapper"></div>
