Add navbar to top of pages

--- a/client/org.html
+++ b/client/org.html
@@ -9,8 +9,24 @@
     <script defer src="./bundle.js"></script>
   </head>
   <body>
-    <header>
-      <nav></nav>
+    <header class="top-nav">
+      <nav>
+        <ul class="menu expanded text-center">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="org.html">Your Organisation</a></li>
+          <li class="active">
+            <a id="personal" href="personal.html">Your Habits</a>
+          </li>
+          <li>
+            <a
+              onclick="window.localStorage.clear()"
+              id="'logout"
+              href="index.html"
+              >Logout</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main id="org-main">
       <div id="leaderboard-container">
