--- a/client/personal.html
+++ b/client/personal.html
@@ -6,6 +6,12 @@
     <link rel="shortcut icon" href="./imgs/Bw_logo.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&family=Merriweather+Sans:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/6ac9ad1595.js"
       crossorigin="anonymous"
