--- a/client/personal.html
+++ b/client/personal.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&family=Merriweather+Sans:ital,wght@1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=EB+Garamond&family=Libre+Baskerville&family=Merriweather+Sans:ital,wght@0,300;1,300&display=swap"
       rel="stylesheet"
     />
     <script
